--- a/wercker.yml
+++ b/wercker.yml
@@ -18,3 +18,12 @@ build:
         name: gradle build
         code: |
           ./gradlew --full-stacktrace -q --project-cache-dir=$WERCKER_CACHE_DIR build
+
+deploy:
+  steps:
+    - internal/docker-push:
+      username: $USERNAME
+      password: $PASSWORD
+      tag: latest
+      repository: dssafford/pipeline
+      registry: https://registry.hub.docker.com
